# Nexiora

./: .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.additions.txt  CMakeLists.txt  CMakePresets.json  README.md  README_COGNITIVE-0001.md  README_COGNITIVE-0002.md  README_COGNITIVE-0002_REPAIR.md  README_COGNITIVE-0003.md  README_COGNITIVE-0004.md  README_COGNITIVE-0005_REPAIR.md  README_COGNITIVE-V2-0001.md  README_COGNITIVE-V2-0001_REPAIR.md  README_CORE-0001_REPAIR.md  README_CORE-0002_SPANISH.md  README_CORE-0003.md  README_CORE-0004.md  README_CORE-0004_REPAIR.md  README_CORE-0005.md  README_EPIC-0001.md  README_EPIC-0002.md  README_EPIC-0003.md  README_EPIC-0004.md  README_EPIC-0007.md  README_EPIC-0007_REPAIR.md  README_EPIC-0007_REPAIR2.md  README_EPIC-0008.md  README_EPIC-0008_REPAIR.md  README_EPIC-0009.md  README_EPIC-0010.md  README_EPIC-01_SPRINT-19.md  README_HIST-0001.md  README_NCOS-001.md  README_NCOS-001_REPAIR.md  README_NCOS-001_REPAIR2.md  README_NCOS-001_REPAIR3.md  README_NCOS-002.md  README_NCOS-002_REPAIR.md  (+34 more)
.ncos_packages/: README.md
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR1_YouTubeRuntimeResilience/: manifest.npkg  verify_install.ps1
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR2_TranscriptDiscovery/: manifest.npkg  verify_install.ps1
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR3_DenoPlanVerification/: manifest.npkg  verify_install.ps1
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR4_OptionalJsRuntime/: manifest.npkg
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR5_DirectCognitiveIntegration/: manifest.npkg
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR6_KnowledgeContractAlignment/: manifest.npkg
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR7_SubtitleOnlyAcquisition/: manifest.npkg
.ncos_packages/CAPABILITY-01_SPRINT-01_REPAIR8_CompileCorrection/: manifest.npkg
.ncos_packages/CAPABILITY-01_SPRINT-01_WebCognitivePipeline/: manifest.npkg  verify_install.ps1
.ncos_packages/CAPABILITY-02_SPRINT-01_GroundedMultiEvidenceReasoning/: manifest.npkg
.ncos_packages/CAPABILITY-02_SPRINT-01_REPAIR1_FullTestMaterialization/: manifest.npkg
.ncos_packages/CAPABILITY-02_SPRINT-02_ContradictionHypothesisReasoning/: manifest.npkg
.ncos_packages/UI-001_NexioraControlCenter/Payload/Apps/ControlCenter/: CMakeLists.txt  NxControlCenterWin.c
Apps/ControlCenter/: CMakeLists.txt  (+3 more)
BOOK/: 00_PROJECT_CONSTITUTION.md  01_CURRENT_STATE.md  02_ROADMAP.md  03_ARCHITECTURE.md  04_NCP.md  05_RUNTIME.md  06_AI_ENGINE.md  07_EVOLUTION_ENGINE.md  08_DEVELOPER_PLATFORM.md  09_BENCHMARK_GUIDE.md  10_CODING_STANDARD.md  11_DESIGN_PATTERNS.md  12_DIRECTORY_STRUCTURE.md  13_BUILD_SYSTEM.md  14_TESTING_GUIDE.md  15_RELEASE_PROCESS.md  16_RFC_INDEX.md  17_GLOSSARY.md  18_AI_CONTEXT.md  HISTORY-Sprint-002.md  HISTORY-Sprint-003-NRL-0007.md  HISTORY-Sprint-003-NRL-0008.md
Docs/: Benchmark-Modules.md  Build-Windows.md  CHANGELOG.md  Containers.md  DECISIONS.md  Evidence.md  Hardware-Abstraction-Layer.md  MASTER_CONTEXT.md  Memory-Manager.md  NEXIORA_CONTROL_CENTER.md  Nexiora-Developer-Platform.md  Nexiora-Research-Lab.md  Nexiora-Research-Registry.md  ROADMAP.md  String-Primitives.md
Knowledge/NCOS/PackageBackups/cognitive-core-v2-sprint-01-goal-graph-and-hierarchical-planning/: CMakeLists.txt  Docs_TESTING_STANDARD.md
LABBOOK/: LAB-0000-Laboratory-Infrastructure.md  LAB-0001-Research-Kernel-Smoke-Test.md  LAB-0002-Manifest-Registry-Engine.md  LAB-0003-Journal-Engine.md  LAB-0004-Experiment-Runner.md  LAB-0005-Evidence-Generator.md  LAB-0006-Promotion-Pipeline.md
Patches/: CMakeLists.NRL-0007.patch  CMakeLists.NRL-0008.patch
RFC/: RFC-0001-Architecture.md  RFC-0002-Evidence-Engine.md  RFC-0003-Memory-Manager.md  RFC-0004-Hardware-Abstraction-Layer.md  RFC-0005-String-Primitives.md  RFC-0011-Containers-Architecture.md  RFC-0012-Self-Measuring-Software.md  RFC-0013-Human-Guided-Evolution.md  RFC-0014-Developer-Platform.md  RFC-0016-Runtime-Is-Sacred.md  RFC-0017-Every-Optimization-Starts-As-An-Experiment.md  RFC-0018-Research-First-Development.md  RFC-0019-Knowledge-Never-Dies.md  RFC-0020-Failed-Experiments-Are-Assets.md  RFC-0021-Reproducible-Science.md  RFC-0022-Experiment-Manifests.md  RFC-0023-Registry-Is-An-Index.md  RFC-0024-Journal-Engine.md  RFC-0024-Research-Graph-Foundation.md  RFC-0025-Experiment-Runner.md  RFC-0025-Research-Graph-Exporter.md  RFC-0026-Research-Evidence-Generator.md  RFC-0026-Research-Graph-Query-Engine.md  RFC-0027-Promotion-Pipeline.md  RFC-NRL-0008-ExperimentDiscoveryEngine.md
SPEC/: SPEC-0001-Laboratory-Kernel.md  SPEC-0002-Manifest-And-Registry.md  SPEC-0003-Journal-Engine.md  SPEC-0004-Experiment-Runner.md  SPEC-0005-Evidence-Generator.md  SPEC-0006-Promotion-Pipeline.md  SPEC-NRL-0008-ExperimentDiscoveryEngine.md  SPEC-NRL-0009-ResearchGraph.md  SPEC-NRL-0010-ResearchGraphExporter.md  SPEC-NRL-0011-ResearchGraphQueryEngine.md
Scripts/: apply-cognitive-0001.ps1  apply-cognitive-0002.ps1  apply-cognitive-0003.ps1  apply-cognitive-0004.ps1  apply-cognitive-0005.ps1  apply-cognitive-v2-0001-repair.ps1  apply-core-0001.ps1  apply-core-0003.ps1  apply-core-0004-repair.ps1  apply-core-0004.ps1  apply-core-0005.ps1  apply-epic-0005.ps1  apply-epic-0006.ps1  apply-epic-0007.ps1  apply-epic-0009.ps1  apply-epic-0010.ps1  apply-ncos-001-repair.ps1  apply-ncos-001-repair2.ps1  apply-ncos-001.ps1  apply-ncos-002-repair.ps1  apply-ncos-002.ps1  apply-ncos-003.ps1  apply-ncos-004.ps1  apply-ncos-005-repair2.ps1  apply-ncos-005.ps1  apply-ncos-006.ps1  apply-ncos-007.ps1  apply-ncos-010-repair3.ps1  apply-ncos-011-repair3.ps1  apply-ncos-011.ps1  apply-ncos-015-warning-repair.ps1  apply-ncos-015.ps1  apply-nrl-0009.ps1  apply-nrl-0010.ps1  apply-nrl-0012.ps1  approve-candidate.ps1  benchmark.ps1  build-debug.ps1  build-release.ps1  generate-research-graph.ps1  (+65 more)
Source/: NxBootstrap.c
Tests/: NxBenchmarkMain.c  NxCoreTests.c
Tools/: nexiora_apply_approved_patch.c  nexiora_fix_proposal.c  nexiora_patch_approval.c  nexiora_patch_verify.c  nexiora_safe_patch.c
nx_mmci_test/: sample.nxknowledge
nx_wcp_test/: sample.nxknowledge
(+1435 files in other folders)
